[tool.poetry]
name = "rl-playground"
version = "0.1.0"
description = ""
authors = ["ShaneFlandermeyer <shaneflandermeyer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
atari-py = "0.2.6"
gym = "0.15.3"
opencv-python = "^4.7.0"
tensorboard = "^2.12.0"
torch = "^1.13.1"
torchvision = "^0.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
